[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = "A comprehensive social network analysis tool using the MovieLens dataset"
authors = ["nimonkaranurag <nimonkaranurag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.24.3"
neo4j = "^5.14.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
loguru = "^0.7.2"
typer = "^0.9.0"
pandas-stubs = "^2.1.1.230928"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^3.0.1"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
